# telco-ai-solution-labs

./: .gitignore  LICENSE  README.md
task1-Knowledge-Retrieval/: .env.example  .gitignore  Task1Solution.md  app.py  pyproject.toml  requirements.txt
task1-Knowledge-Retrieval/scripts/: index_document.py
task1-Knowledge-Retrieval/src/: __init__.py  config.py  embeddings.py  pdf_processor.py  rag_pipeline.py  search_client.py
task3-MCP-Service-Desk/: README.md
task4-MCP-Customer360/: README.md
