[project]
name = "task1-knowledge-retrieval"
version = "0.1.0"
description = "RAG-powered support assistant for T-Mobile 5G Gateway troubleshooting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "streamlit>=1.28.0",
    # Azure Services
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.15.0",
    "openai>=1.12.0",
    # PDF Processing
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.3",
    # Text Processing
    "tiktoken>=0.5.2",
    "langchain-text-splitters>=0.0.1",
    # Configuration
    "python-dotenv>=1.0.0",
    # Utilities
    "tenacity>=8.2.3",
]

[project.scripts]
index = "scripts.index_document:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
